--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,5 +2,5 @@ spring:
   mustache:
     check-template-location: false
 
-code-generator:
-  root-path: "./generated-code"
+project-generator:
+  target-path: "./generated-code"
