--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.2.1.RELEASE'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'java'
+    id 'antlr'
 }
 
 group = 'com.thoughtworks.paoding'
@@ -24,8 +25,10 @@ repositories {
 }
 
 dependencies {
+    antlr "org.antlr:antlr4:4.7.2"
     implementation 'org.springframework.boot:spring-boot-starter-mustache'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.antlr:antlr4-runtime:4.7.2'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
@@ -33,6 +36,13 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+}
+
+sourceSets.main.antlr.srcDirs = ["antlr4"]
+
+generateGrammarSource {
+    outputDirectory = new File("src/main/java/antlr")
+    arguments += ["-package", "antlr"]
 }
 
 test {
